Set up device agnostic code

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQT9L01yMxNEjc1ZPQwEWU",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyNWJw8yOPe8V5Qx6L00ZeJj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -54,7 +56,7 @@
       "metadata": {
         "id": "syG3QUMaHVGY"
       },
-      "execution_count": 16,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -73,7 +75,7 @@
       "metadata": {
         "id": "aXEcw7sMHZxr"
       },
-      "execution_count": 17,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -86,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L-e1D4yoHzRk",
-        "outputId": "03b5ee27-6bef-453b-f812-9e1a9d075ed8"
+        "outputId": "597b1965-7310-4f64-ce91-0570460ba04c"
       },
-      "execution_count": 18,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -98,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 3
         }
       ]
     },
@@ -113,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pigwKcupH2sC",
-        "outputId": "1f7c72e4-fcc0-48be-d6b4-7b04cd8d63e2"
+        "outputId": "1e29790e-5821-44ee-8bca-782e05ef9c26"
       },
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -147,9 +149,9 @@
           "height": 363
         },
         "id": "rYnk0D8kIFTs",
-        "outputId": "2802fdad-379b-4d48-f6d6-be07d573bd83"
+        "outputId": "58582590-d533-4e45-c7ae-c64f9ec89b2c"
       },
-      "execution_count": 20,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -169,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ad4fe301-19b3-4e00-80a0-afab1650b7f0\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -260,7 +262,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad4fe301-19b3-4e00-80a0-afab1650b7f0')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -312,12 +314,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d button.colab-df-convert');\n",
+              "        document.querySelector('#df-ad4fe301-19b3-4e00-80a0-afab1650b7f0 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-a9f6ceb2-740c-4583-8b6e-f2c78c5ca96d');\n",
+              "        const element = document.querySelector('#df-ad4fe301-19b3-4e00-80a0-afab1650b7f0');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -337,8 +339,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-f74c3369-b160-4202-ab40-2b711039f839\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-f74c3369-b160-4202-ab40-2b711039f839')\"\n",
+              "<div id=\"df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -457,7 +459,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-f74c3369-b160-4202-ab40-2b711039f839 button');\n",
+              "        document.querySelector('#df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -468,7 +470,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 5
         }
       ]
     },
@@ -488,19 +490,19 @@
           "height": 448
         },
         "id": "NLCHdYEPJAzN",
-        "outputId": "500f5505-f36a-4499-8b8d-23c8108d9187"
+        "outputId": "631c1aed-74fe-48cf-9a5b-649cab5989d0"
       },
-      "execution_count": 21,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f1eb33643a0>"
+              "<matplotlib.collections.PathCollection at 0x7d8b8021b430>"
             ]
           },
           "metadata": {},
-          "execution_count": 21
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -542,9 +544,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTbElUiPMegL",
-        "outputId": "6386c41c-467c-49d1-b5a8-3c32fcd85cdd"
+        "outputId": "3cf1e0f7-3255-42f5-9265-810bd079abb0"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 7
         }
       ]
     },
@@ -573,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tiY7GFi1MgxR",
-        "outputId": "fa071de0-6a67-4d12-a29e-20e55aee3e6a"
+        "outputId": "23636674-bdd8-45e4-c503-02a4ed288b5a"
       },
-      "execution_count": 24,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -604,7 +606,7 @@
       "metadata": {
         "id": "y8dE-THcNqe5"
       },
-      "execution_count": 25,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -617,9 +619,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sMoQRLxCO8Jo",
-        "outputId": "47278515-fd65-406a-89cb-27b4459fd35b"
+        "outputId": "3dd7d193-6bc9-4445-c665-d4fdb039684e"
       },
-      "execution_count": 26,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -629,7 +631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 26
+          "execution_count": 10
         }
       ]
     },
@@ -647,9 +649,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rjAsYf6KNr_8",
-        "outputId": "8aa73753-b386-4571-9faa-b44eaa689b09"
+        "outputId": "0201bce9-a2be-4986-afc1-e1b97b38ec6b"
       },
-      "execution_count": 27,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -664,7 +666,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 11
         }
       ]
     },
@@ -678,9 +680,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ko7y7QAEODF8",
-        "outputId": "a1a279da-6949-4970-8004-0351255970aa"
+        "outputId": "b1921775-9d72-40eb-f3f1-656000683fb0"
       },
-      "execution_count": 28,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -690,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 12
         }
       ]
     },
@@ -708,7 +710,7 @@
       "metadata": {
         "id": "QMEOp0NOPWci"
       },
-      "execution_count": 33,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -721,9 +723,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iy3lp5lAPj2G",
-        "outputId": "e337d749-bc36-4c9e-a962-9e4ceb6da8e9"
+        "outputId": "05b5e640-63ea-4646-c6ec-cfcd979e9d26"
       },
-      "execution_count": 34,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -733,18 +735,58 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 14
         }
       ]
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "## 2. Building a model to classify our blue and red dots\n",
+        "\n",
+        "1. Set up device agnostic code\n",
+        "2. Construct a modedl(by subclassing `nn.Module`)\n",
+        "3. Define a loss function and optimizer\n",
+        "4. Create a training and test loop"
+      ],
       "metadata": {
         "id": "XdvUey0qQ8A_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "from torch import nn\n",
+        "\n",
+        "# Make device agnostic code\n",
+        "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+        "device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "r6nIRqlfyM3C",
+        "outputId": "cf09bafa-c641-4b1e-81f6-ae0e1b22f40b"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'cuda'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 15
+        }
+      ]
     }
   ]
 }
