Create a model and send it to GPU

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNWJw8yOPe8V5Qx6L00ZeJj",
+      "authorship_tag": "ABX9TyMe0H9NpiqFjviZ1iPVqgGQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -787,6 +787,98 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now create a model that:\n",
+        "\n",
+        "1. Subclasses `nn.Model`\n",
+        "2. Create 2 `nn.Linear` layers that are capable of handling the shapes of our data\n",
+        "3. Define a `forward()` method that outlines the forward pass (or forward computation) of the model\n",
+        "4. Instentiate an instance of our model class and send it to the target `device`"
+      ],
+      "metadata": {
+        "id": "XYB4AVuXzMEL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Create a model that subclasses nn.Model\n",
+        "class CircleModelV0(nn.Module):\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "    # 2. Create 2 nn.Linear layers capable of handling the shapes of our data\n",
+        "    self.layer_1 = nn.Linear(in_features=2,\n",
+        "                             out_features=5) # takes in 2 features and upscales to 5 features\n",
+        "    self.layer_2 = nn.Linear(in_features=5,\n",
+        "                             out_features=1) # takes in 5 features from previous layer ad outputs a single features (same shape as y)\n",
+        "  def forwards(self, x):\n",
+        "    return self.layer_2(self.layer_1(x)) # x -> layer_1 -> layer_2\n",
+        "\n",
+        "# 4. Instentiate an instance of our model class and send it to the target device\n",
+        "model_0 = CircleModelV0().to(device)\n",
+        "model_0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ObRYTPfe0LQK",
+        "outputId": "9a231258-230d-49cf-818d-03292e4efe42"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "CircleModelV0(\n",
+              "  (layer_1): Linear(in_features=2, out_features=5, bias=True)\n",
+              "  (layer_2): Linear(in_features=5, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "next(model_0.parameters()).device"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "4JiZciJU5EAs",
+        "outputId": "ad7c3fa0-b395-49cb-cf5b-9327fc450fab"
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "device(type='cuda', index=0)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "G9mB0V7I5IKm"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
