Replicate model using sequential and make predictions

--- a/02_neural_network_classification.ipynb
+++ b/02_neural_network_classification.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMe0H9NpiqFjviZ1iPVqgGQ",
+      "authorship_tag": "ABX9TyM4h9MVtKveti7s8x0LDIf3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "syG3QUMaHVGY"
       },
-      "execution_count": 1,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -75,7 +75,7 @@
       "metadata": {
         "id": "aXEcw7sMHZxr"
       },
-      "execution_count": 2,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -88,9 +88,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "L-e1D4yoHzRk",
-        "outputId": "597b1965-7310-4f64-ce91-0570460ba04c"
+        "outputId": "a159c6fb-080e-41c7-9834-2787f168de6a"
       },
-      "execution_count": 3,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -100,7 +100,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 71
         }
       ]
     },
@@ -115,9 +115,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pigwKcupH2sC",
-        "outputId": "1e29790e-5821-44ee-8bca-782e05ef9c26"
+        "outputId": "fc092da3-6705-41fd-9a1c-7045976f1a40"
       },
-      "execution_count": 4,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,9 +149,9 @@
           "height": 363
         },
         "id": "rYnk0D8kIFTs",
-        "outputId": "58582590-d533-4e45-c7ae-c64f9ec89b2c"
+        "outputId": "4780cb52-4c00-4db7-90bc-881ece58147f"
       },
-      "execution_count": 5,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -171,7 +171,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-ad4fe301-19b3-4e00-80a0-afab1650b7f0\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-e6a98ab5-916c-44d0-bda2-b554b2bf257c\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -262,7 +262,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ad4fe301-19b3-4e00-80a0-afab1650b7f0')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e6a98ab5-916c-44d0-bda2-b554b2bf257c')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -314,12 +314,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-ad4fe301-19b3-4e00-80a0-afab1650b7f0 button.colab-df-convert');\n",
+              "        document.querySelector('#df-e6a98ab5-916c-44d0-bda2-b554b2bf257c button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-ad4fe301-19b3-4e00-80a0-afab1650b7f0');\n",
+              "        const element = document.querySelector('#df-e6a98ab5-916c-44d0-bda2-b554b2bf257c');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -339,8 +339,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef')\"\n",
+              "<div id=\"df-50d760fe-a46c-417a-a8cb-ee5acec0fc01\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-50d760fe-a46c-417a-a8cb-ee5acec0fc01')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -459,7 +459,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5d8518d1-e214-4b38-b0c9-01e83dfa3fef button');\n",
+              "        document.querySelector('#df-50d760fe-a46c-417a-a8cb-ee5acec0fc01 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -470,7 +470,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 5
+          "execution_count": 73
         }
       ]
     },
@@ -490,19 +490,19 @@
           "height": 448
         },
         "id": "NLCHdYEPJAzN",
-        "outputId": "631c1aed-74fe-48cf-9a5b-649cab5989d0"
+        "outputId": "99e5eb69-399d-4b3e-f5dd-558a554805f6"
       },
-      "execution_count": 6,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7d8b8021b430>"
+              "<matplotlib.collections.PathCollection at 0x7d8ae2ce9f30>"
             ]
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 74
         },
         {
           "output_type": "display_data",
@@ -544,9 +544,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cTbElUiPMegL",
-        "outputId": "3cf1e0f7-3255-42f5-9265-810bd079abb0"
+        "outputId": "d2771409-17ce-4d1a-bdf8-a4767c1da7d6"
       },
-      "execution_count": 7,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -556,7 +556,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 75
         }
       ]
     },
@@ -575,9 +575,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "tiY7GFi1MgxR",
-        "outputId": "23636674-bdd8-45e4-c503-02a4ed288b5a"
+        "outputId": "f30c680a-9d92-44c1-b54a-9301f7e84896"
       },
-      "execution_count": 8,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -606,7 +606,7 @@
       "metadata": {
         "id": "y8dE-THcNqe5"
       },
-      "execution_count": 9,
+      "execution_count": 77,
       "outputs": []
     },
     {
@@ -619,9 +619,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sMoQRLxCO8Jo",
-        "outputId": "3dd7d193-6bc9-4445-c665-d4fdb039684e"
+        "outputId": "13678929-d2aa-4440-b43a-2d8901a89745"
       },
-      "execution_count": 10,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -631,7 +631,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 78
         }
       ]
     },
@@ -649,9 +649,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "rjAsYf6KNr_8",
-        "outputId": "0201bce9-a2be-4986-afc1-e1b97b38ec6b"
+        "outputId": "28522c3c-d7c8-4d84-e8fd-acde903962b7"
       },
-      "execution_count": 11,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -666,7 +666,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 79
         }
       ]
     },
@@ -680,9 +680,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ko7y7QAEODF8",
-        "outputId": "b1921775-9d72-40eb-f3f1-656000683fb0"
+        "outputId": "3eafa416-ff6d-472a-8b4f-421d0ba03635"
       },
-      "execution_count": 12,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -692,7 +692,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 12
+          "execution_count": 80
         }
       ]
     },
@@ -705,12 +705,12 @@
         "X_train, X_test, y_train, y_test = train_test_split(X,\n",
         "                                                    y,\n",
         "                                                    test_size=0.2,    # 0.2 means 20% of the data will be test and 80% will be train\n",
-        "                                                    random_state=43)"
+        "                                                    random_state=42)"
       ],
       "metadata": {
         "id": "QMEOp0NOPWci"
       },
-      "execution_count": 13,
+      "execution_count": 81,
       "outputs": []
     },
     {
@@ -723,9 +723,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iy3lp5lAPj2G",
-        "outputId": "05b5e640-63ea-4646-c6ec-cfcd979e9d26"
+        "outputId": "ed4afa16-7e46-4fe5-cfd6-1ab3629a2cf3"
       },
-      "execution_count": 14,
+      "execution_count": 82,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -735,7 +735,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 82
         }
       ]
     },
@@ -769,9 +769,9 @@
           "height": 35
         },
         "id": "r6nIRqlfyM3C",
-        "outputId": "cf09bafa-c641-4b1e-81f6-ae0e1b22f40b"
+        "outputId": "12be3609-b500-4f81-be78-2a451440dddf"
       },
-      "execution_count": 15,
+      "execution_count": 83,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -784,7 +784,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 83
         }
       ]
     },
@@ -805,6 +805,7 @@
     {
       "cell_type": "code",
       "source": [
+        "from sklearn import datasets\n",
         "# 1. Create a model that subclasses nn.Model\n",
         "class CircleModelV0(nn.Module):\n",
         "  def __init__(self):\n",
@@ -826,9 +827,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ObRYTPfe0LQK",
-        "outputId": "9a231258-230d-49cf-818d-03292e4efe42"
+        "outputId": "ae0c4a0b-5b92-4de0-b1a3-2134e72f42f3"
       },
-      "execution_count": 18,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -841,7 +842,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 84
         }
       ]
     },
@@ -855,9 +856,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4JiZciJU5EAs",
-        "outputId": "ad7c3fa0-b395-49cb-cf5b-9327fc450fab"
+        "outputId": "79582b3b-1d43-4959-8482-5e867e09cc00"
       },
-      "execution_count": 20,
+      "execution_count": 85,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,18 +868,125 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 85
         }
       ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# Replicate the model using 'nn.Sequential'\n",
+        "model_0 = nn.Sequential(\n",
+        "    nn.Linear(in_features=2, out_features=5),\n",
+        "    nn.Linear(in_features=5, out_features=1)\n",
+        ").to(device)\n",
+        "\n",
+        "model_0"
+      ],
       "metadata": {
-        "id": "G9mB0V7I5IKm"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "G9mB0V7I5IKm",
+        "outputId": "78dcfa3f-d1ee-4a7e-dd59-5a530b0d7aa2"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Sequential(\n",
+              "  (0): Linear(in_features=2, out_features=5, bias=True)\n",
+              "  (1): Linear(in_features=5, out_features=1, bias=True)\n",
+              ")"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 86
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Make predictions\n",
+        "with torch.inference_mode():\n",
+        "  untrained_preds = model_0(X_test.to(device))\n",
+        "print(f\"Length of predictions: {len(untrained_preds)}, Shape: {untrained_preds.shape}\")\n",
+        "print(f\"Length of test samples: {len(X_test)}, Shape: {X_test.shape}\")\n",
+        "print(f\"\\nFirst 10 predictions:\\n {untrained_preds[:10]}\")\n",
+        "print(f\"\\nFirst 10 labels:\\n{y_test[:10]}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "VtODoArL9LJr",
+        "outputId": "63dbf35a-df66-4479-afed-c9a3d1607203"
+      },
+      "execution_count": 87,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length of predictions: 200, Shape: torch.Size([200, 1])\n",
+            "Length of test samples: 200, Shape: torch.Size([200, 2])\n",
+            "\n",
+            "First 10 predictions:\n",
+            " tensor([[-0.4162],\n",
+            "        [-0.4528],\n",
+            "        [-0.2965],\n",
+            "        [-0.4502],\n",
+            "        [-0.2590],\n",
+            "        [-0.2817],\n",
+            "        [-0.4146],\n",
+            "        [-0.3744],\n",
+            "        [-0.2983],\n",
+            "        [-0.4548]], device='cuda:0')\n",
+            "\n",
+            "First 10 labels:\n",
+            "tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test[:10], y_test[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uVOzQ-UeD517",
+        "outputId": "1886aedd-5a59-452d-9540-afd9a617fed4"
+      },
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(tensor([[-0.3752,  0.6827],\n",
+              "         [ 0.0154,  0.9600],\n",
+              "         [-0.7028, -0.3147],\n",
+              "         [-0.2853,  0.9664],\n",
+              "         [ 0.4024, -0.7438],\n",
+              "         [ 0.6323, -0.5711],\n",
+              "         [ 0.8561,  0.5499],\n",
+              "         [ 1.0034,  0.1903],\n",
+              "         [-0.7489, -0.2951],\n",
+              "         [ 0.0538,  0.9739]]),\n",
+              " tensor([1., 0., 1., 0., 1., 1., 0., 0., 1., 0.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 88
+        }
+      ]
     }
   ]
 }
